package ex41;

public class AlphaSort {
}
