package ex41;

public class FileReader {
}
